estilo menu cambiado

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <!--<link rel="stylesheet" href="css/theme.css">-->
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- Google Authorship and Publisher Markup -->
+    <!-- Google Authorship and Publisher Markup 
     <link rel="author" href="https://plus.google.com/[Google+_Profile]/posts">
     <link rel="publisher" href="https://plus.google.com/[Google+_Page_Profile]">
 
-    <!-- Schema.org markup for Google+ -->
+    <!-- Schema.org markup for Google+ -- >
     <meta itemprop="name" content="The Name or Title Here">
     <meta itemprop="description" content="This is the page description">
     <meta itemprop="image" content="http://www.example.com/image.jpg">
 
-    <!-- Twitter Card data -->
+    <!-- Twitter Card data -- >
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@publisher_handle">
     <meta name="twitter:title" content="Page Title">
@@ -39,7 +39,7 @@
     <!-- Twitter summary card with large image must be at least 280x150px -->
     <meta name="twitter:image:src" content="http://www.example.com/image.html">
 
-    <!-- Open Graph data -->
+    <!-- Open Graph data -- >
     <meta property="og:title" content="Title Here" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://www.example.com/" />
@@ -51,13 +51,22 @@
     <meta property="article:section" content="Article Section" />
     <meta property="article:tag" content="Article Tag" />
     <meta property="fb:admins" content="Facebook numberic ID" />
-
+-->
 <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
 
+
+<section>
+   <div class="container">
+       <div class="logo" title="Casafont - Toledo" alt="Casafont - Toledo">
+           
+       </div>
+   </div> 
+</section>
+
 <!--navbar collapsed-->
-    <nav class="navbar navbar-default navbar-inverse visible-xs" role="navigation"><!--MOBILE-->
+    <nav class="navbar navbar-var" role="navigation"><!--MOBILE-->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
               <span class="sr-only"></span>
@@ -70,40 +79,15 @@
 
         <div class="menu collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav text-center">
-                <li class="active"><a href="#" alt="" title="">› HOME</a></li>
-                <li class=""><a href="#quienes" alt="QUIENES SOMOS" title="QUIENES SOMOS">› QUIENES SOMOS</a></li>
-                <li class=""><a href="#areas" alt="AREAS DE ACTUACIÓN" title="AREAS DE ACTUACIÓN">› AREAS DE ACTUACIÓN</a></li>
-                <li class=""><a href="#contacto" alt="CONTACTO" title="CONTACTO">› CONTACTO</a></li>
+                <li class="active"><a href="#" alt="" title="">HOME</a></li>
+                <li class=""><a href="#quienes" alt="QUIENES SOMOS" title="QUIENES SOMOS">QUIENES SOMOS</a></li>
+                <li class=""><a href="#areas" alt="AREAS DE ACTUACIÓN" title="AREAS DE ACTUACIÓN">AREAS DE ACTUACIÓN</a></li>
+                <li class=""><a href="#contacto" alt="CONTACTO" title="CONTACTO">CONTACTO</a></li>
             </ul>
-            <form class="navbar-form navbar-left" role="search">
-                <ul class="nav navbar-nav navbar-right text-center">
-                    <li><a href="" target="_blank">› HOLA <i class="glyphicon glyphicon-new-window"></i></a></li>
-                    <li class="" ><a href="#">› BLOG</a></li>
-                </ul>
-            </form>
         </div>
     </nav>
 
 
-
-<section>
-   <div class="container">
-       <div class="logo" title="Casafont - Toledo" alt="Casafont - Toledo">
-           
-       </div>
-   </div> 
-</section>
-
-<nav>
-   <div class="container">
-        <ul class="nav navbar-nav text-center">
-            <li class="active"><a href="#" alt="" title="">HOME</a></li>
-            <li class=""><a href="#" alt="" title="">QUIENES SOMOS</a></li>
-            <li class=""><a href="#" alt="" title="">AREAS DE ACTUACIÓN</a></li>
-            <li class=""><a href="#" alt="" title="">CONTACTO</a></li>
-        </ul>
-   </div> 
-</nav>
 
 <section>
    <div class="container">
